Stop nav from jumping when going from one line to two

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,9 +32,15 @@ nav {
   }
 }
 
-@media (min-width: 612px) {
+@media (min-width: 613px) {
   nav li {
     line-height: 60px;
+  }
+}
+
+@media (max-width: 612px) {
+  nav li {
+    line-height: 30px;
   }
 }
 
